--- a/less/render_field_options.less
+++ b/less/render_field_options.less
@@ -9,6 +9,25 @@
   }
 }
 
+#sim_grid {
+
+  ul.sim_grid_row {
+    background: #444444;
+    min-height: 50px;
+
+    li.item {
+      display: inline-block;
+      text-align: center;
+      background: #ffffff;
+      min-height: 30px;
+      min-width: 42px;
+      margin: 5px;
+      padding: 5px;
+    }
+
+  }
+
+}
 
 
 /*! jQuery UI - v1.11.2 - 2014-10-30
