stage before fixing multiple things on page

--- a/css/render_field_options.css
+++ b/css/render_field_options.css
@@ -9,6 +9,7 @@
   min-height: 50px;
 }
 #sim_grid ul.sim_grid_row li.item {
+  cursor: move;
   display: inline-block;
   text-align: center;
   background: #ffffff;
