--- a/less/render_field_options.less
+++ b/less/render_field_options.less
@@ -16,6 +16,7 @@
     min-height: 50px;
 
     li.item {
+      cursor: move;
       display: inline-block;
       text-align: center;
       background: #ffffff;
