--- a/src/app/plugins/acf-address/scss/render_field_options.scss
+++ b/src/app/plugins/acf-address/scss/render_field_options.scss
@@ -1,13 +1,13 @@
 // colors
-@table-bg: #fefefe;
-@table-border-color: #444;
-@body-bg: #ffffff;
+$table-bg: #fefefe;
+$table-border-color: #444;
+$body-bg: #ffffff;
 
-@table-cell-padding: 3px;
+$table-cell-padding: 3px;
 
-@line-height-base: 25px;
-@line-height-computed: 10px;
-@screen-xs-max: 768px;
+$line-height-base: 25px;
+$line-height-computed: 10px;
+$screen-xs-max: 768px;
 
 .acfAddressWidget {
 
@@ -42,7 +42,7 @@
   // --------------------------------------------------
 
   table {
-    background-color: @table-bg;
+    background-color: $table-bg;
   }
   th {
     text-align: left;
@@ -53,7 +53,7 @@
   table {
     width: 100%;
     max-width: 100%;
-    margin-bottom: @line-height-computed;
+    margin-bottom: $line-height-computed;
     // Cells
     > thead,
     > tbody,
@@ -61,17 +61,17 @@
       > tr {
         > th,
         > td {
-          padding: @table-cell-padding;
-          line-height: @line-height-base;
+          padding: $table-cell-padding;
+          line-height: $line-height-base;
           vertical-align: top;
-          border-top: 1px solid @table-border-color;
+          border-top: 1px solid $table-border-color;
         }
       }
     }
     // Bottom align for column headings
     > thead > tr > th {
       vertical-align: bottom;
-      border-bottom: 2px solid @table-border-color;
+      border-bottom: 2px solid $table-border-color;
     }
     // Remove top border from thead by default
     > caption + thead,
@@ -86,12 +86,12 @@
     }
     // Account for multiple tbody instances
     > tbody + tbody {
-      border-top: 2px solid @table-border-color;
+      border-top: 2px solid $table-border-color;
     }
 
     // Nesting
     .table {
-      background-color: @body-bg;
+      background-color: $body-bg;
     }
   }
 
@@ -122,13 +122,13 @@
   // will display normally.
 
   table {
-    @media screen and (max-width: @screen-xs-max) {
+    @media screen and (max-width: $screen-xs-max) {
       width: 100%;
-      margin-bottom: (@line-height-computed * 0.75);
+      margin-bottom: ($line-height-computed * 0.75);
       overflow-y: hidden;
       overflow-x: auto;
       -ms-overflow-style: -ms-autohiding-scrollbar;
-      border: 1px solid @table-border-color;
+      border: 1px solid $table-border-color;
       -webkit-overflow-scrolling: touch;
 
       // Tighten up spacing
